# jataayu

./: .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  README.md  jataayu-substack-post.md  pyproject.toml
examples/: jataayu-policy.example.yml
jataayu/: __init__.py  __main__.py  api.py  convenience.py  threats.py
jataayu/config/: __init__.py  policy.py
jataayu/core/: __init__.py  engine.py  taint.py  threat.py
jataayu/guards/: __init__.py  inbound.py  outbound.py
jataayu/integrations/: __init__.py  cli.py  mcp_gateway.py
jataayu/surfaces/: __init__.py  profiles.py
skills/openclaw/: SKILL.md
tests/: test_api.py  test_convenience.py  test_credential_leak.py  test_engine.py  test_inbound.py  test_inbound_aguara.py  test_mcp_gateway.py  test_outbound.py  test_policy.py  test_taint.py
